pkgcore-checks Release Notes
============================

See ChangeLog for full commit logs; this is summarized and major changes.


* added a null reporter for performance testing.

* more visibility optimizations; an additional 9% chopped off of full repo
  runs in comparison to 0.4.12.


* 0.4.12: December 27th, 2009

* corner case import error in metadata_xml scan for py3k is now fixed; if
  you saw urllib.urlopen complaints, this is fixed.

* >snakeoil-0.3.4 is now required for sdist generation.

* visibility scans now use 22% less memory (around 130MB on python2.6 x86_64)
  and is about 3% faster.


0.4.11: December 20th, 2009

* minor speedup in visibility scans- about 3% faster now.

* fix a traceback in deprecated from when portage writes the ebuild cache out
  w/out any _eclasses_ entry.

* fix a rare traceback in visibility scans where a virtual metapkg has zero
  matches.


0.4.10: December 14th, 2009

* fix a bug where use deps on metapkgs was invalidly being flagged.


0.4.9: November 26th, 2009

* fix a bug in test running- bzr_verinfo isn't generated for pkgcore-checks
  in sdist (no need), yet build_py was trying to regenerate it.  Basically
  broke installation on machines that lacked bzr.


0.4.8: November 26th, 2009

* experimental py3k support.

* test runner improvements via depending on snakeoil.distutils_extensions.


0.4.7: October 26, 2009

* fix invalid flagging of use deps on PyQt4 for ia64; basically PyQt4[webkit]
  is valid due to a pkg level masked use reversal... the checking code however
  wasn't doing incremental expansion itself..  Same could occur for forced use.


0.4.6: October 22, 2009

* fix a bug in tristate use evaluation of potential USE combinations.
  Roughly, if a flag is masked *and* forced, the result is it's masked.

* compatibility fixes for pkgcore 0.5; 0.5 isn't required, but advised.


0.4.5: November 7, 2008

* verify whether or not a requested use state is actually viable when profile